se actualiza nuevos archivos

--- a/repositorio3/src/app/app.component.html
+++ b/repositorio3/src/app/app.component.html
@@ -1,19 +1,5 @@
-<h1>navbar</h1> todas las paginas tienen una parte sup o izquierd
-<h1><div class="card w-75">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <a href="#" class="btn btn-primary">Button</a>
-  </div>
-</div>
+<app-navbar> </app-navbar>
 
-<div class="card w-50">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <a href="#" class="btn btn-primary">Button</a>
-  </div>
-</div></h1>
 <router-outlet />
 
-<h1>footer</h1> es el nombre de la empresa
+<app-footer></app-footer>
