--- a/repositorio3/src/app/pages/inicio/inicio.component.html
+++ b/repositorio3/src/app/pages/inicio/inicio.component.html
@@ -1,1 +1,7 @@
-<p>inicio works!</p>
+<h1><div class="card w-75">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <a href="#" class="btn btn-primary">Button</a>
+    </div>
+</div></h1>
